[gd_scene load_steps=21 format=3 uid="uid://c41f2x03lnjw6"]

[ext_resource type="Script" path="res://Scenes/HUD/UnitMenu/TowerMenu.gd" id="2_cxnnl"]
[ext_resource type="Texture2D" uid="uid://dex1xjcdq1fv7" path="res://Resources/Textures/UI/rect_container_m.tres" id="3_723pa"]
[ext_resource type="PackedScene" uid="uid://22mf4myucw0w" path="res://Scenes/HUD/Buttons/TowerButton.tscn" id="4_uarln"]
[ext_resource type="PackedScene" uid="uid://8xsklkw4jhlw" path="res://Scenes/HUD/Buttons/EmptyUnitButton.tscn" id="7_75y5s"]
[ext_resource type="PackedScene" uid="uid://b6l4hi00yx7js" path="res://Scenes/HUD/UnitMenu/TowerDetails.tscn" id="7_xja40"]
[ext_resource type="StyleBox" uid="uid://c2wcu6a3ywhdl" path="res://Resources/Theme/UnitMenu/unit_level_label_normal.tres" id="10_hpsst"]
[ext_resource type="Texture2D" uid="uid://60qc7jcvckhh" path="res://Assets/HUD/misc3.png" id="11_bilts"]
[ext_resource type="Script" path="res://Scenes/HUD/Buttons/BuffGroupButton.gd" id="12_v3yi6"]
[ext_resource type="PackedScene" uid="uid://7hnklay7gedu" path="res://Scenes/HUD/UnitMenu/BuffContainer.tscn" id="13_b0jes"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ue77a"]

[sub_resource type="InputEventKey" id="InputEventKey_3p2ki"]
device = -1
physical_keycode = 85
unicode = 117

[sub_resource type="Shortcut" id="Shortcut_gi5f6"]
events = [SubResource("InputEventKey_3p2ki")]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gno2"]
atlas = ExtResource("11_bilts")
region = Rect2(0, 128, 128, 128)
margin = Rect2(10, 10, 0, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yslek"]
atlas = ExtResource("11_bilts")
region = Rect2(256, 256, 128, 128)

[sub_resource type="InputEventKey" id="InputEventKey_8sgsd"]
device = -1
physical_keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_4gk67"]
events = [SubResource("InputEventKey_8sgsd")]

[sub_resource type="AtlasTexture" id="AtlasTexture_m846m"]
atlas = ExtResource("11_bilts")
region = Rect2(128, 256, 128, 128)
margin = Rect2(10, 10, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm7a5"]
atlas = ExtResource("11_bilts")
region = Rect2(0, 256, 128, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6gup"]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_bottom = 5.0
texture = ExtResource("3_723pa")
texture_margin_left = 13.9504
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 13.9504
region_rect = Rect2(1283, 192, 139, 154)
modulate_color = Color(0.588235, 0.588235, 0.588235, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh5fy"]
atlas = ExtResource("11_bilts")
region = Rect2(896, 0, 128, 128)

[node name="TowerMenu" type="PanelContainer" node_paths=PackedStringArray("_tab_container", "_tower_button", "_title_label", "_level_label", "_info_label", "_reset_sell_button_timer", "_upgrade_button", "_sell_button", "_details_tab", "_specials_scroll_container", "_inventory_empty_slots", "_items_box_container", "_buff_container", "_details", "_buff_group_container", "_buff_group_button_1", "_buff_group_button_2", "_buff_group_button_3", "_buff_group_button_4", "_buff_group_button_5", "_buff_group_button_6", "_passive_ability_container", "_active_ability_container")]
custom_minimum_size = Vector2(630, 850)
offset_right = 630.0
offset_bottom = 850.0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxEmpty_ue77a")
script = ExtResource("2_cxnnl")
_tab_container = NodePath("TabContainer")
_tower_button = NodePath("TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer/TowerButton")
_title_label = NodePath("MarginContainer2/TitleLabel")
_level_label = NodePath("MarginContainer/VBoxContainer2/LevelLabel")
_info_label = NodePath("TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer/InfoLabel")
_reset_sell_button_timer = NodePath("ResetSellButtonTimer")
_upgrade_button = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/UpgradeButton")
_sell_button = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/SellButton")
_details_tab = NodePath("TabContainer/DetailsTab")
_specials_scroll_container = NodePath("TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/ScrollContainer")
_inventory_empty_slots = NodePath("TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots")
_items_box_container = NodePath("TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/ItemsContainer")
_buff_container = NodePath("MarginContainer3/BuffContainer")
_details = NodePath("TabContainer/DetailsTab/TowerDetails")
_buff_group_container = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer")
_buff_group_button_1 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup1")
_buff_group_button_2 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup2")
_buff_group_button_3 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup3")
_buff_group_button_4 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup4")
_buff_group_button_5 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup5")
_buff_group_button_6 = NodePath("MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup6")
_passive_ability_container = NodePath("TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/VBoxContainer/PassiveAbilityContainer")
_active_ability_container = NodePath("TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/VBoxContainer/ActiveAbilityContainer")

[node name="ResetSellButtonTimer" type="Timer" parent="."]

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
tabs_visible = false

[node name="MainTab" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/MainTab"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InfoContainer" type="PanelContainer" parent="TabContainer/MainTab/VBoxContainer"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="TowerButton" parent="TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer" instance=ExtResource("4_uarln")]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"UnitButtonBright"
_tower_id = 1

[node name="InfoLabel" type="RichTextLabel" parent="TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[color=YELLOW]Element:[/color] [color=32cd32ff]Nature[/color]
[color=YELLOW]Attack type:[/color] [color=d2b48cff]Physical[/color]
[color=YELLOW]Attack:[/color] [color=GOLD]28[/color] dps, [color=GOLD]800[/color] range
[color=YELLOW]Damage:[/color] [color=GOLD]123-123[/color]
[color=YELLOW]Mana:[/color] [color=CORNFLOWER_BLUE]10/20[/color]"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="Label" type="Label" parent="TabContainer/MainTab/VBoxContainer/InfoContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSectionTitle"
text = "Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialsContainer" type="PanelContainer" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="Label" type="Label" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSectionTitle"
text = "Abilities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2"]
layout_mode = 2

[node name="PassiveAbilityContainer" type="GridContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
columns = 5

[node name="ActiveAbilityContainer" type="GridContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
columns = 5

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2"]
visible = false
layout_mode = 2

[node name="TowerSpecialsContainer" type="VBoxContainer" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpecialsLabel" type="RichTextLabel" parent="TabContainer/MainTab/VBoxContainer/SpecialsContainer/MarginContainer2/ScrollContainer/TowerSpecialsContainer"]
layout_mode = 2
bbcode_enabled = true
text = "	[color=GOLD]320[/color] AoE: [color=GOLD]50%[/color] damage
[color=GOLD]+15%[/color] damage to mass ([color=GOLD]+1%[/color]/lvl)
[color=GOLD]+15%[/color] damage to humanoid ([color=GOLD]+1%[/color]/lvl)"
fit_content = true

[node name="Inventory" type="PanelContainer" parent="TabContainer/MainTab/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/Inventory"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="Label" type="Label" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSectionTitle"
text = "Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/MainTab/VBoxContainer/Inventory"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="InventoryEmptySlots" type="GridContainer" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2"]
layout_mode = 2
columns = 3

[node name="EmptyUnitButton" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton2" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton3" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton4" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton5" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton6" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/InventoryEmptySlots" instance=ExtResource("7_75y5s")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="ItemsContainer" type="GridContainer" parent="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2"]
layout_mode = 2
columns = 3

[node name="DetailsTab" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 0
horizontal_scroll_mode = 0

[node name="TowerDetails" parent="TabContainer/DetailsTab" instance=ExtResource("7_xja40")]
layout_mode = 2
mouse_force_pass_scroll_events = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = -20
theme_override_constants/margin_top = -20
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("10_hpsst")
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="UpgradeButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Upgrade (U)"
focus_mode = 0
theme_type_variation = &"CircleButton"
shortcut = SubResource("Shortcut_gi5f6")
shortcut_in_tooltip = false
icon = SubResource("AtlasTexture_0gno2")
expand_icon = true

[node name="DetailsButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Stat Details"
focus_mode = 0
theme_type_variation = &"CircleButton"
icon = SubResource("AtlasTexture_yslek")
expand_icon = true

[node name="SellButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Sell (R)"
focus_mode = 0
theme_type_variation = &"CircleButton"
shortcut = SubResource("Shortcut_4gk67")
shortcut_in_tooltip = false
icon = SubResource("AtlasTexture_m846m")
expand_icon = true

[node name="BuffGroupContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 2

[node name="BuffGroup1" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "1"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffGroup2" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "2"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffGroup3" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "3"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffGroup4" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "4"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffGroup5" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "5"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffGroup6" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_type_variation = &"BuffGroupButton"
text = "6"
expand_icon = true
script = ExtResource("12_v3yi6")
_buff_group_number = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jm7a5")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "



6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8

[node name="BuffContainer" parent="MarginContainer3" instance=ExtResource("13_b0jes")]
layout_mode = 2
columns = 12

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -15

[node name="TitleLabel" type="Label" parent="MarginContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxTexture_j6gup")
text = "Unit"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme_type_variation = &"CircleButton"
icon = SubResource("AtlasTexture_wh5fy")
icon_alignment = 1
expand_icon = true

[connection signal="gui_input" from="TabContainer/MainTab/VBoxContainer/Inventory/MarginContainer2/ItemsContainer" to="." method="_on_items_container_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/DetailsButton" to="." method="_on_details_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup1" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup1" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup2" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup2" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup3" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup3" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup4" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup4" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup5" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup5" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup6" to="MarginContainer/VBoxContainer2/VBoxContainer/BuffGroupContainer/BuffGroup6" method="_on_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
